--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="/main.js"></script>
+  <script src="/main.js" defer></script>
   <link rel="stylesheet" href="/style.css">
   <title>Calculator</title>
 </head>
 <body>
   <div class="calculator">
     <h1 id="calc-label">Calclatr</h1>
-    <div class="display">
-      <p>80085</p>
+    <div class="display-window">
+      <p id="display-text" class="display-text">80085</p>
     </div>
     <div class="button-grid">
       <button id="clear" class="clear">AC</button>
-      <button id="add" class="add">+</button>
+      <button id="add" class="add operator">+</button>
       <button id="seven" class="number" value="7">7</button>
       <button id="eight" class="number" value="8">8</button>
       <button id="nine" class="number" value="9">9</button>
-      <button id="subtract" class="subtract">-</button>
+      <button id="subtract" class="subtract operator">-</button>
       <button id="four" class="number" value="4">4</button>
       <button id="five" class="number" value="5">5</button>
       <button id="six" class="number" value="6">6</button>
-      <button id="multiply" class="multiply">×</button>
+      <button id="multiply" class="multiply operator">×</button>
       <button id="one" class="number" value="1">1</button>
       <button id="two" class="number" value="2">2</button>
       <button id="three" class="number" value="3">3</button>
-      <button id="divide" class="divide">÷</button>
+      <button id="divide" class="divide operator">÷</button>
       <button id="zero" class="number" value="0">0</button>
       <button id="equals" class="equals">=</button>
     </div>
